Fixed .fa to be centered. (was a little off center)

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -235,10 +235,9 @@ hr {
 	border: #fff solid 1px;
 	padding: 1%;
 	border-radius: 50%;
-	margin-left: 50%;
 	position: absolute;
-	bottom: 0;
-	margin-bottom: 2%;
+	top: 90%;
+  left: 48%;
 }
 
 .title {
